feature: [174] Remove redundant changes